--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,4 @@
-<h1 style="text-align: center; padding: 1em 0 0.3em">
-<a class="logo-text" href="{{ site.baseurl }}/">{{site.title}}</a>
+<h1 style="text-align: center; padding: 1em 0 0.3em">{{site.title}}
 </h1>
 
 <h2 style="text-align: center; margin: 0">
