--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -18,16 +18,14 @@ layout: default
       </div><!-- .archive-tag-list -->
   <hr/> 
       {% for tag in sortedTags %}
-        <h2 id="{{ tag | cgi_escape }}">{{ tag }}
-        <span><a href="#top" class="archive-top-link">&#x2B71</a></span>
-        </h2>
+        <h2 id="{{ tag | cgi_escape }}">{{ tag }}</h2>
         
         <ul class="archive-post-list">
         {% for post in site.tags[tag] %}
           <li><span class="archive-meta"><time class="archive-date" datetime="{{ post.date | date: "%Y-%m-%d" }}">{{ post.date | date: "%Y-%m-%d" }}</time> — </span><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> </li>
         {% endfor %}
         </ul><!-- .archive-post-list -->
-
+<p><a href="#top" class="archive-top-link">&#x2B71 Back to Top</a></p>
       {% endfor %}
     </div><!-- .post-content -->
   </article><!-- .post -->
