--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@ layout: default
     </div><!-- .post-meta -->
   </article><!-- .post -->
 
-  <div align="right"><a href="#page">&#x2B71; Back to top</a></div>
+  <div align="right"><a href="#page">&#11121; Back to top</a></div>
   <div style="margin-top: 3em"></div>
 
 </main><!-- .main-content -->
