--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -25,7 +25,7 @@ layout: default
           <li><span class="archive-meta"><time class="archive-date" datetime="{{ post.date | date: "%Y-%m-%d" }}">{{ post.date | date: "%Y-%m-%d" }}</time> — </span><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> </li>
         {% endfor %}
         </ul><!-- .archive-post-list -->
-<p><a href="#top" class="archive-top-link">&#x2B71; Back to Top</a></p>
+<p><a href="#top" class="archive-top-link">&#11121; Back to Top</a></p>
       {% endfor %}
     </div><!-- .post-content -->
   </article><!-- .post -->
