--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,7 +9,7 @@ layout: default
     </div><!-- .post-content -->
   </article><!-- .post -->
 
-  <div align="right"><a href="#page">&#x2B71; Back to top</a></div>
+  <div align="right"><a href="#page">&#11121; Back to top</a></div>
   <div style="margin-top: 3em"></div>
 
 
