--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,10 @@
       {% include footer.html %}
     </div><!-- .inner -->
   </div><!-- .site -->
-
+  
+  <!-- Scripts -->
+  <script src="{{ '/assets/js/plugins.js' | relative_url }}"></script>
+  <script src="{{ '/assets/js/custom.js' | relative_url }}"></script>
 
 </body>
 </html>
