--- a/_sass/_site-footer.scss
+++ b/_sass/_site-footer.scss
@@ -3,9 +3,9 @@
    ========================================================================== */
 
 .site-footer {
-  border-top: 1px solid #d7d7d7;
-  padding: 0;
-  text-align: right;
+  padding: 1.5em 0 0.5em;
+  text-align: center;
+  background: #fafafa;
 }
 
 .offsite-links {
