--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -3,11 +3,12 @@
    ========================================================================== */
 
 .post {
-  margin: 1em 0 5em;
+  margin: 1em 0 1em;
+  border-bottom: solid 1px #d7d7d7
 }
 
 .post-header {
-  margin-bottom: 3em;
+  margin-bottom: 2em;
 }
 
 .post-date {
@@ -36,7 +37,7 @@
 
 .post-title {
   font-size: 1.4rem;
-  margin: 0 0 0.5rem;
+  margin: 0.5rem 0 0.8rem;
 
   @media only screen and (max-width: 600px) {
     font-size: 1.2rem;
@@ -55,6 +56,7 @@
 
 .read-more {
   font-weight: bold;
+  text-align: right
 }
 
 /* Author profile */
