--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -22,7 +22,7 @@ layout: default
         
         <ul class="archive-post-list">
         {% for post in site.tags[tag] %}
-          <li><span class="archive-meta"><time class="archive-date" datetime="{{ post.date | date: "%Y-%m-%d" }}">{{ post.date | date: "%Y-%m-%d" }}</time> — </span><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> </li>
+          <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> </li>
         {% endfor %}
         </ul><!-- .archive-post-list -->
 <p><a href="#top" class="archive-top-link">Back to Top</a></p>
